Not show dash if timeguid column unchecked

--- a/Timechko/index.html
+++ b/Timechko/index.html
@@ -321,7 +321,7 @@
                 <td v-if="shownColumns.timeGuid && parsed.detailedTimeGuid" :class="parsed.type === 'TimeGuid'             && 'value-match'" class="time-guid">
                   <span class="timestamp" title="Timestamp">{{ parsed.detailedTimeGuid.timeLow }}</span>-<span class="timestamp" title="Timestamp">{{ parsed.detailedTimeGuid.timeMid }}</span>-<span class="version" title="Version. For TimeGuid must be 1">{{ parsed.detailedTimeGuid.version }}</span><span class="timestamp" title="Timestamp">{{ parsed.detailedTimeGuid.timeHigh }}</span>-<span class="clock-sequence" title="Clock sequence">{{ parsed.detailedTimeGuid.clockSequence }}</span>-<span class="node" title="Node">{{ parsed.detailedTimeGuid.node }}</span>
                 </td>
-                <td v-else>&mdash;</td>
+                <td v-else-if="shownColumns.timeGuid">&mdash;</td>
                 <td></td>
               </tr>
               <tr v-else>
